@@ -25,6 +25,7 @@ twic.db.obj.User = function() {
 		'followers_count': 0,
 		'friends_count': 0,
 		'statuses_count': 0,
+		'description': '',
 		'regdate': twic.utils.date.getCurrentTimestamp(),
 		'dt': twic.utils.date.getCurrentTimestamp()
 	};
