@@ -90,6 +90,7 @@
 				<p class="name"></p>
 				<p class="nick"></p>
 				<p class="url"></p>
+				<p class="bio"></p>
 
 				<div class="clearer"></div>
 
