@@ -1,4 +1,5 @@
 In development
+	+ Bio information to the profile page
 
 0.3
 	+ Follow/unfollow users from the profile page
